See the file HISTORY for a user-oriented summary of all the changes.

16-Jun-2009 (Zesstra)
  - Removed built-in PCRE package, because it was awfully out of date. Since
    libpcre is installed on nearly every halfway POSIX compatible system, we
    just link against the system libpcre. If there is none available, no PCREs
    are available in the driver (#658).
    (mregexp.c, pkg-pcre)

15-Jun-2009 (Fuchur)
  - (parse.c) Fix off-by-one error in find_string(). It returned a wrong index.

07-Jun-2009 (Gnomi)
  - Made break_sp an svalue_t* and break addresses have their own
    type (T_BREAK_ADDR).
    (svalue.h, interpret.c)

06-Jun-2009 (Zesstra)
  - Changed some defines in interpret.c to static inline functions.

06-Jun-2009 (Gnomi)
  - Made T_ERROR_HANDLER a standalone type (without T_LVALUE)
    (svalue.h, interpret.c, and a lot of other files)

04-Jun-2009 (Zesstra)
  - Converted defines in struct.h into static functions.

03-Jun-2009 (Zesstra
  - We require C99 from now on. Remove checks and definitions for
    C99-incompatible systems.
    (port.h)
  - Changed a bunch of counters to statcounter_t to stop them from overflowing
    after a few weeks uptime. 
    (comm, interpret, mregex, mstrings, otable, simulate, swap)
  - Removed the deprecated efun cat() (#637)
    The efun cat can be easily and more flexibly replaced by an sefun.
    (files.c)

01-Jun-2009 (Gnomi)
  - Forked 3.5 off the 3.3 branch.

30-May-2009 (LDMud Team)  (3.3.719)
  - Created snapshot.

29-May-2009 (Gnomi)
  - (call_out.c) Preserve the order of call_out()s.
  - (mudlib/deprecated/hash.c) Added sefuns md5() and sha1().
  - (configure) Added a bunch of quotation marks.

28-May-2009 (Zesstra)
  - Added sefun cat(), updated documentation of cat().
    To reduce the workload of our users we supply implementations of
    deprecated and removed efuns. This time: the deprecated efun cat().
    (mudlib/deprecated/*)
  - Removed a configure check for ancient gcc on AIX.