@@ -19,8 +19,6 @@
  */
 #ifdef PCRE_ERROR_RECURSIONLIMIT
 #define RE_ERROR_BACKTRACK PCRE_ERROR_RECURSIONLIMIT
-#elif defined(PCRE_ERROR_MATCHLIMIT)
-#define RE_ERROR_BACKTRACK PCRE_ERROR_MATCHLIMIT
 #else
 #define RE_ERROR_BACKTRACK (-8) // PCRE_ERROR_MATCHLIMIT from PCRE
 #endif
